# perps-market

./: Cargo.toml  README.md  design.md
docs/: SPEC.md
src/: account.rs  adl.rs  api.rs  conditional.rs  config.rs  custody.rs  events.rs  funding.rs  lib.rs  liquidation.rs  liquidity.rs  main.rs  margin.rs  mark_price.rs  market.rs  order.rs  position.rs  price_feed.rs  risk.rs  settlement.rs  types.rs
src/engine/: config.rs  core.rs  funding.rs  liquidations.rs  mod.rs  orders.rs  positions.rs  pricing.rs  results.rs
tests/: property_tests.rs  solvency_tests.proptest-regressions  solvency_tests.rs  stress_tests.rs
