[package]
name = "perps-core"
version = "0.1.0"
edition = "2021"
description = "Perpetual DEX core engine. risk-first architecture"

[dependencies]
rust_decimal = { version = "1.33", features = ["maths"] }
rust_decimal_macros = "1.33"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
serde_json = "1.0.149"

[lib]
path = "src/lib.rs"

[[bin]]
name = "perps-sim"
path = "src/main.rs"
